# equinor-ctf-2022

./: README.md  updateWriteups.py
educational/BrokenUX/: README.MD
educational/drivetosurvives01/: readme.md
writeups/: README.md
writeups/Azure/Automated the secrets/: README.md
writeups/Azure/Cloud protected web app/: README.md
writeups/Azure/DSC/: README.md
writeups/Azure/Service Principals as SysAdmins/: README.md
writeups/Azure/ServicePrincipal/: README.md
writeups/Azure/Super Secure Storage/: README.md
writeups/Beginner/Console Pew 2/: README.md
writeups/Beginner/HiddenOutOfSight/: README.md
writeups/Beginner/Lost Keys/: README.md  vault.pcapng
writeups/Beginner/Notes/: README.md
writeups/Beginner/Notes - Revisited/: README.md
writeups/Beginner/Spring/: README.md
writeups/Beginner/blog/: README.md
writeups/Beginner/nop/: README.md
writeups/Boot2Root/Haxquash - User/: README.md
writeups/Boot2Root/Haxquashed - Root/: README.md
writeups/Boot2Root/The Projects - Root/: README.md
writeups/Boot2Root/The Projects - User/: README.md
writeups/Crypto/Encrypt all the files/: README.md  encryptor.py
writeups/Crypto/Proof of knowledge/: Dockerfile  README.md  server.py
writeups/Crypto/rsimpla/: README.md  chall.py  output.txt  requirements.txt
writeups/Educational/Broken UX/: README.md
writeups/Educational/Console Pew/: README.md
writeups/Educational/Drive To Survive S01/: README.md
writeups/Educational/When the Stars Align/: README.md
writeups/Misc/hashle/rebug/rs/: Cargo.toml
writeups/Misc/hashle/rebug/rs/src/: main.rs
(+196 files in other folders)
