[package]
name = "hashle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = "0.6.9"
colored = "2.0.0"
md5 = "0.7.0"
rand = "0.8.5"
rkyv = { version = "0.7.39", features = ["validation"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
ureq = { version = "2.5.0", features = ["json"] }
